Fixing entry issue in README.md